--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "our node project",
   "main": "main.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
